feat: add exam-tips

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -32,8 +32,8 @@
 
 <div class="controls">
     <label>选择任务类型:
-        <label><input type="radio" name="task-type" value="write" checked>Write</label>
-        <label><input type="radio" name="task-type" value="writeRecite">Write Recite</label>
+        <label><input type="radio" name="task-type" value="write" checked> Write</label>
+        <label><input type="radio" name="task-type" value="writeRecite"> Write Recite</label>
         <label><input type="radio" name="task-type" value="grammar"> Grammar</label>
         <label><input type="radio" name="task-type" value="linearAlgebra"> Linear Algebra</label>
         <label><input type="radio" name="task-type" value="advancedMath"> Advanced Mathematics</label>
@@ -229,23 +229,15 @@
         {name: '分裂结构', duration: 3},
         {name: '嵌套结构', duration: 1},
         {name: '平行结构', duration: 3},
-        {name: '考场攻略-谓语动词时态', duration: 1},
-        {name: '考场攻略-谓语动词语态', duration: 1},
-        {name: '考场攻略-谓语动词变化', duration: 1},
-        {name: '考场攻略-简单句扩展', duration: 1},
-        {name: '考场攻略-非谓语动词作定语、状语', duration: 1},
-        {name: '考场攻略-名词性从句', duration: 1},
-        {name: '考场攻略-定语从句', duration: 1},
-        {name: '考场攻略-状语从句', duration: 1},
-        {name: '考场攻略-分析主谓', duration: 1},
-        {name: '考场攻略-简化长难句', duration: 1},
-        {name: '考场攻略-特殊结构的分析长难句', duration: 1}
+        {name: '考场攻略-简单句', duration: 1},
+        {name: '考场攻略-长难句', duration: 2},
+        {name: '考场攻略-分析长难句', duration: 2}
       ],
       rounds: ['书&笔记', {label: '视频', duration: 1}, {label: '笔记&Book训练', duration: 1}, {
         label: '笔记',
         duration: 1
       }, {label: '笔记&App训练', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-19,2025-09-20,2025-09-22,2025-09-23,2025-09-24,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-06,2025-10-07,2025-10-11,2025-10-14,2025-10-17,2025-10-18,2025-10-24,2025-10-25,2025-11-01'
+      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-19,2025-09-20,2025-09-22,2025-09-23,2025-09-24,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-06,2025-10-07,2025-10-11,2025-10-14,2025-10-17,2025-10-18,2025-10-24,2025-10-25,2025-11-01,2025-11-04,2025-11-05,2025-11-06,2025-11-07'
     },
     linearAlgebra: {
       startDate: '2025-08-11',
