feat: add exam-tips of analyze-complex-sentence

--- a/english/write/compare.html
+++ b/english/write/compare.html
@@ -21,6 +21,10 @@
         #audioPlayer {
             width: 600px;
         }
+        #textB {
+            font-size: 16px;
+            line-height: 22px;
+        }
     </style>
 </head>
 <body>
