--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -170,29 +170,29 @@
       restDays: '2025-08-19,2025-08-21,2025-08-24,2025-08-26,2025-08-28,2025-08-29,2025-08-30,2025-08-31,2025-09-02,2025-09-05,2025-09-06,2025-09-07,2025-09-10,2025-09-11,2025-09-12,2025-09-13,2025-09-14,2025-09-15,2025-09-17,2025-09-19,2025-09-20,2025-09-21,2025-09-22,2025-09-23,2025-09-27,2025-09-29,2025-09-30,2025-10-01,2025-10-02,2025-10-07,2025-10-08,2025-10-09,2025-10-11,2025-10-13,2025-10-16,2025-10-17,2025-10-18,2025-10-21,2025-10-23,2025-10-25,2025-10-26,2025-10-28'
     },
     writeRecite: {
-      startDate: '2025-11-09',
+      startDate: '2025-11-11',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: '001-002', duration: 1},
-        {name: '003-004', duration: 1},
-        {name: '005-006', duration: 1},
-        {name: '007-008', duration: 1},
-        {name: '009-010', duration: 1},
-        {name: '051-052', duration: 1},
-        {name: '053-054', duration: 1},
-        {name: '055-056', duration: 1},
-        {name: '057-058', duration: 1},
-        {name: '059-060', duration: 1},
-        {name: '041-042', duration: 1},
-        {name: '043-044', duration: 1},
-        {name: '045-046', duration: 1},
-        {name: '047-048', duration: 1},
-        {name: '049-050', duration: 1},
-        {name: '011-012', duration: 1},
-        {name: '013-014', duration: 1},
-        {name: '015-016', duration: 1},
-        {name: '017-018', duration: 1},
-        {name: '019-020', duration: 1}
+        {name: '057', duration: 1},
+        {name: '011', duration: 1},
+        {name: '058', duration: 1},
+        {name: '059', duration: 1},
+        {name: '012', duration: 1},
+        {name: '013', duration: 1},
+        {name: '051', duration: 1},
+        {name: '014', duration: 1},
+        {name: '060', duration: 1},
+        {name: '015', duration: 1},
+        {name: '052', duration: 1},
+        {name: '016', duration: 1},
+        {name: '053', duration: 1},
+        {name: '017', duration: 1},
+        {name: '054', duration: 1},
+        {name: '018', duration: 1},
+        {name: '055', duration: 1},
+        {name: '019', duration: 1},
+        {name: '056', duration: 1},
+        {name: '020', duration: 1}
       ],
       rounds: ['听 & 写', '中译英', '中译英', '默写1', '默写2', '默写3'],
       restDays: ''
