update: Unit 9-1, Unit 12-1, Unit 12-2

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -170,39 +170,38 @@
       restDays: '2025-08-19,2025-08-21,2025-08-24,2025-08-26,2025-08-28,2025-08-29,2025-08-30,2025-08-31,2025-09-02,2025-09-05,2025-09-06,2025-09-07,2025-09-10,2025-09-11,2025-09-12,2025-09-13,2025-09-14,2025-09-15,2025-09-17,2025-09-19,2025-09-20,2025-09-21,2025-09-22,2025-09-23,2025-09-27,2025-09-29,2025-09-30,2025-10-01,2025-10-02,2025-10-07,2025-10-08,2025-10-09,2025-10-11,2025-10-13,2025-10-16,2025-10-17,2025-10-18,2025-10-21,2025-10-23,2025-10-25,2025-10-26,2025-10-28'
     },
     writeRecite: {
-      startDate: '2025-11-12',
+      startDate: '2025-11-16',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: '057', duration: 1},
-        {name: '058', duration: 1},
-        {name: '011', duration: 1},
-        {name: '059', duration: 1},
-
-        {name: '050', duration: 1},
-
-        {name: '041', duration: 1},
-        {name: '002', duration: 1},
-        {name: '043', duration: 1},
-        {name: '003', duration: 1},
+        {name: '050', duration: 2},
+        {name: '043', duration: 2},
         {name: '044', duration: 1},
-        {name: '004', duration: 1},
-        {name: '045', duration: 1},
-        {name: '006', duration: 1},
-        {name: '001', duration: 1},
+        {name: '045', duration: 2},
         {name: '046', duration: 1},
-        {name: '005', duration: 1},
         {name: '047', duration: 1},
+        {name: '041', duration: 1},
         {name: '048', duration: 1},
         {name: '049', duration: 1},
-
-        {name: '007', duration: 1},
         {name: '042', duration: 1},
+
+        {name: '002', duration: 1},
+        {name: '003', duration: 1},
+        {name: '004', duration: 1},
+        {name: '005', duration: 1},
+        {name: '006', duration: 1},
+        {name: '007', duration: 1},
         {name: '008', duration: 1},
         {name: '009', duration: 1},
-        {name: '010', duration: 1}
-
+        {name: '010', duration: 1},
+        {name: '001', duration: 1}
       ],
-      rounds: ['听 & 写', '中译英', '中译英', '默写1', '默写2', '默写3'],
+      rounds: ['听 & 写',
+        {label: '中译英', duration: 1},
+        {label: '中译英', duration: 1},
+        {label: '默写', duration: 1},
+        {label: '默写', duration: 1},
+        {label: '默写', duration: 1}
+      ],
       restDays: ''
     },
     grammar: {
