--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -185,16 +185,18 @@
         {name: '003', duration: 1},
 
         {name: '048', duration: 2},
-        {name: '049', duration: 2},
-        {name: '042', duration: 2},
 
         {name: '004', duration: 1},
         {name: '005', duration: 1},
         {name: '006', duration: 1},
         {name: '007', duration: 1},
+
+        {name: '049', duration: 2},
+        {name: '042', duration: 2},
+
         {name: '008', duration: 1},
         {name: '009', duration: 1},
-        {name: '010', duration: 1},
+        {name: '010', duration: 1}
       ],
       rounds: ['听 & 写',
         {label: '中译英', duration: 1},
