--- a/english/write/utils/compare-online.html
+++ b/english/write/utils/compare-online.html
@@ -6,6 +6,7 @@
     <title>Article Compare</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; max-width: 100%; overflow-x: hidden; }
+        p { margin: 0; }
         textarea {
             width: 100%; height: 264px; margin-top: 10px;
             font-size: 16px;
@@ -40,7 +41,7 @@
         .legend .legend-inner {display: flex; gap: 12px; margin-left: 6px;}
         .legend .legend-inner span { display: inline-block; padding: 2px 5px; }
         .red-text-green-bg { background: #d4fcbc; color: red; font-weight: bold; text-decoration: underline; }
-        .section { margin-top: 15px; padding: 10px; padding-top: 0px; border: 1px solid #ddd; border-radius: 6px; background: #f9f9f9; }
+        .section { margin-top: 15px; padding: 10px; border: 1px solid #ddd; border-radius: 6px; background: #f9f9f9; }
         .question { display: flex; align-items: center; gap: 8px;}
         .question-wrap { display: flex; align-items: center; gap: 20px; margin-bottom: 10px; flex-wrap: wrap; }
         .hidden { display: none; }
