--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -37,10 +37,11 @@
         <label><input type="radio" name="task-type" value="grammar"> Grammar</label>
         <label><input type="radio" name="task-type" value="linearAlgebra"> Linear Algebra</label>
         <label><input type="radio" name="task-type" value="advancedMath"> Advanced Mathematics</label>
-        <label><input type="radio" name="task-type" value="advancedMathMo"> Mo Advanced Mathematics</label>
         <label><input type="radio" name="task-type" value="coreWords" checked> Core Words</label>
-        <label><input type="radio" name="task-type" value="lowFrequencyWords&PE" checked> Low-Frequency Words &
-            PE</label>
+        <label><input type="radio" name="task-type" value="lowFrequencyWords&PE" checked> Low-Frequency Words & PE</label>
+        <label><input type="radio" name="task-type" value="advancedMathMo"> Mo Advanced Mathematics</label>
+        <label><input type="radio" name="task-type" value="writeMo"> Mo Write</label>
+        <label><input type="radio" name="task-type" value="lowFrequencyWords&PEMo" checked> Mo Low-Frequency Words & PE</label>
     </label>
 
     <button id="load-default-btn" type="button">加载默认设置</button>
@@ -308,32 +309,34 @@
       restDays: '2025-08-29,2025-08-30,2025-09-02,2025-09-03,2025-09-04,2025-09-05,2025-09-09,2025-09-10,2025-09-11,2025-09-13,2025-09-16,2025-09-19,2025-09-20'
     },
     advancedMath: {
-      startDate: '2025-10-21',
-      reviewDays: '0,2,4,0,0,3,0,3,7,2,15,0,16',
+      startDate: '2025-12-21',
+      reviewDays: '0,2,0,2,0,5,15',
       tasks: [
-        {name: '函数极限与连续', duration: 5},
-        {name: '数列极限', duration: 5},
-        {name: '一元函数微分学的概念', duration: 5},
-        {name: '一元函数微分学的计算', duration: 5},
-        {name: '一元函数微分学的几何应用', duration: 5},
-        {name: '一元函数微分学的应用', duration: 5},
-        {name: '一元函数微分学的物理与经济应用', duration: 5},
-        {name: '一元函数积分学的概念与性质', duration: 5},
-        {name: '一元函数积分学的计算', duration: 5},
-        {name: '一元函数积分学的几何应用', duration: 5},
-        {name: '一元函数积分学的积分（不）等式应用', duration: 5},
-        // {name: '一元函数积分学的物理与经济应用', duration: 5},
-        {name: '多元函数微分学', duration: 5},
-        {name: '二重积分', duration: 5},
-        {name: '微分方程', duration: 5}
+        {name: '函数极限与连续', duration: 1},
+        {name: '数列极限', duration: 3},
+        {name: '一元函数微分学的概念', duration: 3},
+        {name: '一元函数微分学的计算', duration: 4},
+        {name: '一元函数微分学的几何应用', duration: 4},
+        {name: '一元函数微分学的应用', duration: 4},
+        {name: '一元函数微分学的物理与经济应用', duration: 4},
+        {name: '一元函数积分学的概念与性质', duration: 4},
+        {name: '一元函数积分学的计算', duration: 4},
+        {name: '一元函数积分学的几何应用', duration: 4},
+        {name: '一元函数积分学的积分（不）等式应用', duration: 4},
+        {name: '一元函数积分学的物理与经济应用', duration: 4},
+        {name: '多元函数微分学', duration: 4},
+        {name: '二重积分', duration: 4},
+        {name: '微分方程', duration: 4}
       ],
-      rounds: ['书', '18讲', '660题', '基础', '总结', {label: '看笔记', duration: 2}, {
-        label: '看笔记',
-        duration: 2
-      }, '提高', {label: '看笔记', duration: 2}, {label: '看笔记', duration: 2}, '660题第二遍', {
-        label: '看笔记',
-        duration: 1
-      }, '提高第二遍', {label: '笔记', duration: 2}],
+      rounds: ['Book',
+        {label: '660题', duration: 3},
+        {label: '基础', duration: 2},
+        {label: '总结', duration: 2},
+        {label: '提高', duration: 2},
+        {label: '看笔记', duration: 2},
+        {label: '660题第二遍', duration: 2},
+        {label: '提高第二遍', duration: 2}
+      ],
       restDays: ''
     },
     advancedMathMo: {
@@ -364,6 +367,58 @@
         duration: 1
       }, '提高第二遍', {label: '笔记', duration: 2}],
       restDays: ''
+    },
+    writeMo: {
+      startDate: '2025-08-12',
+      reviewDays: '0,1,3,6,15',
+      tasks: [
+        {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1}, {name: '005', duration: 1},
+        {name: '006', duration: 1}, {name: '007', duration: 1}, {name: '008', duration: 1}, {name: '009', duration: 1},
+        {name: '010', duration: 1}, {name: '001', duration: 1}, {name: '011', duration: 1}, {name: '012', duration: 1},
+        {name: '013', duration: 1}, {name: '014', duration: 1}, {name: '015', duration: 1}, {name: '016', duration: 1},
+        {name: '041', duration: 1}, {name: '017', duration: 1}, {name: '042', duration: 1}, {name: '051', duration: 1},
+        {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '052', duration: 1}, {name: '053', duration: 1},
+        {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1}, {name: '020', duration: 1},
+        {name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1},
+        {name: '043', duration: 1}, {name: '044', duration: 1}, {name: '045', duration: 1}, {name: '046', duration: 1},
+        {name: '047', duration: 1}, {name: '048', duration: 1}, {name: '049', duration: 1}, {name: '050', duration: 1}
+      ],
+      rounds: ['学', '读', '读', '中译英', '中译英', '默写1', '默写2'],
+      restDays: ''
+    },
+    'lowFrequencyWords&PEMo': {
+      startDate: '2025-12-26',
+      reviewDays: '0,1,3,6,15',
+      tasks: [
+        {name: '001-008', duration: 1},
+        {name: '009-016', duration: 1},
+        {name: 'PE 001-020', duration: 1},
+        {name: '017-024', duration: 1},
+        {name: '025-032', duration: 1},
+        {name: 'PE 021-040', duration: 1},
+        {name: '033-040', duration: 1},
+        {name: '041-048', duration: 1},
+        {name: 'PE 041-060', duration: 1},
+        {name: '049-056', duration: 1},
+        {name: '057-064', duration: 1},
+        {name: 'PE 061-080', duration: 1},
+        {name: '065-072', duration: 1},
+        {name: '073-080', duration: 1},
+        {name: 'PE 081-100', duration: 1},
+        {name: '081-088', duration: 1},
+        {name: '089-096', duration: 1},
+        {name: '097-104', duration: 1},
+        {name: '105-112', duration: 1},
+        {name: '113-118', duration: 1}
+      ],
+      rounds: ['视频',
+        {label: '笔记', duration: 1},
+        {label: '笔记', duration: 1},
+        {label: '笔记', duration: 1},
+        {label: '笔记', duration: 1},
+        {label: '笔记', duration: 1}
+      ],
+      restDays: '2025-12-28,2025-12-29,2026-01-02,2026-01-03,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15,2026-01-17,2026-01-19,2026-01-21,2026-01-23,2026-01-25,2026-01-27,2026-01-29'
     }
   };
 
