--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -340,54 +340,52 @@
       restDays: ''
     },
     advancedMathMo: {
-      startDate: '2025-10-21',
-      reviewDays: '0,2,4,0,0,3,0,3,7,2,15,0,16',
+      startDate: '2025-12-02',
+      reviewDays: '0,1,0,2,6,15',
       tasks: [
-        {name: '函数极限与连续', duration: 5},
-        {name: '数列极限', duration: 5},
-        {name: '一元函数微分学的概念', duration: 5},
-        {name: '一元函数微分学的计算', duration: 5},
-        {name: '一元函数微分学的几何应用', duration: 5},
-        {name: '一元函数微分学的应用', duration: 5},
-        {name: '一元函数微分学的物理与经济应用', duration: 5},
-        {name: '一元函数积分学的概念与性质', duration: 5},
+        {name: '函数极限与连续', duration: 7},
+        {name: '数列极限', duration: 3},
+        {name: '一元函数微分学的概念', duration: 2},
+        {name: '一元函数微分学的计算', duration: 3},
+        {name: '一元函数微分学的几何应用', duration: 4},
+        {name: '一元函数微分学的应用', duration: 4},
+        {name: '一元函数微分学的物理与经济应用', duration: 1},
+        {name: '一元函数积分学的概念与性质', duration: 6},
         {name: '一元函数积分学的计算', duration: 5},
-        {name: '一元函数积分学的几何应用', duration: 5},
-        {name: '一元函数积分学的积分（不）等式应用', duration: 5},
-        // {name: '一元函数积分学的物理与经济应用', duration: 5},
-        {name: '多元函数微分学', duration: 5},
-        {name: '二重积分', duration: 5},
+        {name: '一元函数积分学的几何应用', duration: 3},
+        {name: '一元函数积分学的积分（不）等式应用', duration: 2},
+        {name: '一元函数积分学的物理与经济应用', duration: 1},
+        {name: '多元函数微分学', duration: 6},
+        {name: '二重积分', duration: 4},
         {name: '微分方程', duration: 5}
       ],
-      rounds: ['书', '18讲', '660题', '基础', '总结', {label: '看笔记', duration: 2}, {
-        label: '看笔记',
-        duration: 2
-      }, '提高', {label: '看笔记', duration: 2}, {label: '看笔记', duration: 2}, '660题第二遍', {
-        label: '看笔记',
-        duration: 1
-      }, '提高第二遍', {label: '笔记', duration: 2}],
-      restDays: ''
+         rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
+        ],
+      restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
+    
     },
     writeMo: {
-      startDate: '2025-08-12',
+      startDate: '2025-12-15',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1}, {name: '005', duration: 1},
-        {name: '006', duration: 1}, {name: '007', duration: 1}, {name: '008', duration: 1}, {name: '009', duration: 1},
-        {name: '010', duration: 1}, {name: '001', duration: 1}, {name: '011', duration: 1}, {name: '012', duration: 1},
-        {name: '013', duration: 1}, {name: '014', duration: 1}, {name: '015', duration: 1}, {name: '016', duration: 1},
-        {name: '041', duration: 1}, {name: '017', duration: 1}, {name: '042', duration: 1}, {name: '051', duration: 1},
-        {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '052', duration: 1}, {name: '053', duration: 1},
-        {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1}, {name: '020', duration: 1},
-        {name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1},
-        {name: '043', duration: 1}, {name: '044', duration: 1}, {name: '045', duration: 1}, {name: '046', duration: 1},
-        {name: '047', duration: 1}, {name: '048', duration: 1}, {name: '049', duration: 1}, {name: '050', duration: 1}
+        {name: '001', duration: 1}, {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1}, 
+        {name: '005', duration: 1}, {name: '006', duration: 1}, {name: '007', duration: 1}, {name: '008', duration: 1},
+        {name: '009', duration: 1}, {name: '010', duration: 1}, 
+        //{name: '011', duration: 1}, {name: '012', duration: 1},
+        //{name: '013', duration: 1}, {name: '014', duration: 1}, {name: '015', duration: 1}, {name: '016', duration: 1},
+        //{name: '017', duration: 1}, {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '020', duration: 1}, 
+        {name: '041', duration: 1}, {name: '042', duration: 1}, {name: '043', duration: 1}, {name: '044', duration: 1}, 
+        {name: '045', duration: 1}, {name: '046', duration: 1}, {name: '047', duration: 1}, {name: '048', duration: 1},
+        {name: '049', duration: 1}, {name: '050', duration: 1}, 
+        //{name: '051', duration: 1}, {name: '052', duration: 1},
+        //{name: '053', duration: 1}, {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1},
+        //{name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1}
       ],
-      rounds: ['学', '读', '读', '中译英', '中译英', '默写1', '默写2'],
-      restDays: ''
+      rounds: ['听', '读', '背', '中译英', '中译英', '默写1', '默写2'],
+      restDays: '2025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2026-01-01,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15'
     },
     'lowFrequencyWords&PEMo': {
-      startDate: '2025-12-26',
+      startDate: '2025-12-15',
       reviewDays: '0,1,3,6,15',
       tasks: [
         {name: '001-008', duration: 1},
@@ -418,8 +416,8 @@
         {label: '笔记', duration: 1},
         {label: '笔记', duration: 1}
       ],
-      restDays: '2025-12-28,2025-12-29,2026-01-02,2026-01-03,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15,2026-01-17,2026-01-19,2026-01-21,2026-01-23,2026-01-25,2026-01-27,2026-01-29'
-    }
+      restDays: '2025-12-21,2025-12-23,2025-12-25,2025-12-27,2025-12-29,2025-12-31,2026-01-02,2026-01-04,2026-01-06,2026-01-08,2026-01-10,2026-01-12,2026-01-14,2026-01-16'
+   }
   };
 
   // 创建任务行
