--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -24,6 +24,24 @@
         .rest-input { width: 100%; box-sizing: border-box; }
         .rounds-container { margin-top: 12px; padding: 6px; border: 1px solid #ddd; border-radius: 6px; }
         .round-input { width: 220px; margin-right: 4px; }
+        .task-type-two-cols {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 24px;
+            margin-bottom: 12px;
+            margin-top: 8px;
+        }
+
+        .task-col {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .task-col label {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
@@ -31,18 +49,28 @@
 <h2>艾宾浩斯学习计划生成器（按周日历）</h2>
 
 <div class="controls">
-    <label>选择任务类型:
-        <label><input type="radio" name="task-type" value="write" checked> Write</label>
-        <label><input type="radio" name="task-type" value="writeRecite"> Write Recite</label>
-        <label><input type="radio" name="task-type" value="grammar"> Grammar</label>
-        <label><input type="radio" name="task-type" value="linearAlgebra"> Linear Algebra</label>
-        <label><input type="radio" name="task-type" value="advancedMath"> Advanced Mathematics</label>
-        <label><input type="radio" name="task-type" value="coreWords" checked> Core Words</label>
-        <label><input type="radio" name="task-type" value="lowFrequencyWords&PE" checked> Low-Frequency Words & PE</label>
-        <label><input type="radio" name="task-type" value="advancedMathMo"> Mo Advanced Mathematics</label>
-        <label><input type="radio" name="task-type" value="writeMo"> Mo Write</label>
-        <label><input type="radio" name="task-type" value="lowFrequencyWords&PEMo" checked> Mo Low-Frequency Words & PE</label>
-    </label>
+    <label>选择任务类型:</label>
+
+    <div class="task-type-two-cols">
+        <!-- 左列：常规任务 -->
+        <div class="task-col">
+            <label><input type="radio" name="task-type" value="write"> Write</label>
+            <label><input type="radio" name="task-type" value="writeRecite"> Write Recite</label>
+            <label><input type="radio" name="task-type" value="grammar"> Grammar</label>
+            <label><input type="radio" name="task-type" value="linearAlgebra"> Linear Algebra</label>
+            <label><input type="radio" name="task-type" value="advancedMath"> Advanced Mathematics</label>
+            <label><input type="radio" name="task-type" value="coreWords" checked> Core Words</label>
+            <label><input type="radio" name="task-type" value="lowFrequencyWords&PE"> Low-Frequency Words & PE</label>
+        </div>
+
+        <!-- 右列：Mo 系列 -->
+        <div class="task-col">
+            <label><input type="radio" name="task-type" value="advancedMathMo"> Mo Advanced Mathematics</label>
+            <label><input type="radio" name="task-type" value="writeMo"> Mo Write</label>
+            <label><input type="radio" name="task-type" value="lowFrequencyWords&PEMo"> Mo Low-Frequency Words & PE</label>
+        </div>
+    </div>
+
 
     <button id="load-default-btn" type="button">加载默认设置</button>
 
@@ -186,7 +214,7 @@
         label: 'App & 笔记',
         duration: 1
       }, {label: '笔记', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-10-16,2025-10-23,2025-10-24,2025-10-27,2025-10-31,2025-11-01,2025-11-06,2025-11-08,2025-11-09,2025-11-10,2025-11-11,2025-11-15,2025-11-16,2025-11-18,2025-11-20,2025-11-25,2025-11-26,2025-11-27,2025-11-28,2025-11-30,2025-12-01,2025-12-03,2025-12-05,2025-12-06,2025-12-07,2025-12-08,2025-12-10,2025-12-13'
+      restDays: '2025-10-16,2025-10-23,2025-10-24,2025-10-27,2025-10-31,2025-11-01,2025-11-06,2025-11-08,2025-11-09,2025-11-10,2025-11-11,2025-11-15,2025-11-16,2025-11-18,2025-11-20,2025-11-25,2025-11-26,2025-11-27,2025-11-28,2025-11-30,2025-12-01,2025-12-03,2025-12-05,2025-12-06,2025-12-07,2025-12-08,2025-12-10,2025-12-13,2025-12-16,2025-12-17,2025-12-18,2025-12-19,2025-12-20'
     },
     write: {
       startDate: '2025-08-12',
@@ -362,21 +390,21 @@
          rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
         ],
       restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
-    
+
     },
     writeMo: {
       startDate: '2025-12-15',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: '001', duration: 1}, {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1}, 
+        {name: '001', duration: 1}, {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1},
         {name: '005', duration: 1}, {name: '006', duration: 1}, {name: '007', duration: 1}, {name: '008', duration: 1},
-        {name: '009', duration: 1}, {name: '010', duration: 1}, 
+        {name: '009', duration: 1}, {name: '010', duration: 1},
         //{name: '011', duration: 1}, {name: '012', duration: 1},
         //{name: '013', duration: 1}, {name: '014', duration: 1}, {name: '015', duration: 1}, {name: '016', duration: 1},
-        //{name: '017', duration: 1}, {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '020', duration: 1}, 
-        {name: '041', duration: 1}, {name: '042', duration: 1}, {name: '043', duration: 1}, {name: '044', duration: 1}, 
+        //{name: '017', duration: 1}, {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '020', duration: 1},
+        {name: '041', duration: 1}, {name: '042', duration: 1}, {name: '043', duration: 1}, {name: '044', duration: 1},
         {name: '045', duration: 1}, {name: '046', duration: 1}, {name: '047', duration: 1}, {name: '048', duration: 1},
-        {name: '049', duration: 1}, {name: '050', duration: 1}, 
+        {name: '049', duration: 1}, {name: '050', duration: 1},
         //{name: '051', duration: 1}, {name: '052', duration: 1},
         //{name: '053', duration: 1}, {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1},
         //{name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1}
