feat: update Unit 20-2, Unit 18-2, Unit 21-1, Unit 19-1

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -340,30 +340,21 @@
       startDate: '2025-12-21',
       reviewDays: '0,2,0,2,0,5,15',
       tasks: [
-        {name: '函数极限与连续', duration: 1},
-        {name: '数列极限', duration: 3},
-        {name: '一元函数微分学的概念', duration: 3},
-        {name: '一元函数微分学的计算', duration: 4},
-        {name: '一元函数微分学的几何应用', duration: 4},
-        {name: '一元函数微分学的应用', duration: 4},
-        {name: '一元函数微分学的物理与经济应用', duration: 4},
-        {name: '一元函数积分学的概念与性质', duration: 4},
-        {name: '一元函数积分学的计算', duration: 4},
-        {name: '一元函数积分学的几何应用', duration: 4},
-        {name: '一元函数积分学的积分（不）等式应用', duration: 4},
-        {name: '一元函数积分学的物理与经济应用', duration: 4},
+        {name: '函数、极限、连续', duration: 5},
+        {name: '一元函数微分学', duration: 10},
+        {name: '一元函数积分学', duration: 14},
         {name: '多元函数微分学', duration: 4},
         {name: '二重积分', duration: 4},
-        {name: '微分方程', duration: 4}
+        {name: '常微分方程', duration: 4},
       ],
       rounds: ['Book',
-        {label: '660题', duration: 3},
-        {label: '基础', duration: 2},
-        {label: '总结', duration: 2},
-        {label: '提高', duration: 2},
-        {label: '看笔记', duration: 2},
-        {label: '660题第二遍', duration: 2},
-        {label: '提高第二遍', duration: 2}
+        {label: '660题', duration: 5},
+        {label: '基础', duration: 8},
+        {label: '总结', duration: 5},
+        {label: '提高', duration: 8},
+        {label: '看笔记', duration: 5},
+        {label: '660题第二遍', duration: 8},
+        {label: '提高第二遍', duration: 10}
       ],
       restDays: ''
     },
