--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -336,28 +336,60 @@
       }, '提高第二遍', {label: '笔记', duration: 2}],
       restDays: '2025-08-29,2025-08-30,2025-09-02,2025-09-03,2025-09-04,2025-09-05,2025-09-09,2025-09-10,2025-09-11,2025-09-13,2025-09-16,2025-09-19,2025-09-20'
     },
+    // advancedMath: {
+    //   startDate: '2025-12-21',
+    //   reviewDays: '0,2,0,2,0,5,15',
+    //   tasks: [
+    //     {name: '函数、极限、连续', duration: 5},
+    //     {name: '一元函数微分学', duration: 10},
+    //     {name: '一元函数积分学', duration: 14},
+    //     {name: '多元函数微分学', duration: 4},
+    //     {name: '二重积分', duration: 4},
+    //     {name: '常微分方程', duration: 4},
+    //   ],
+    //   rounds: ['Book',
+    //     {label: '660题', duration: 5},
+    //     {label: '基础', duration: 8},
+    //     {label: '总结', duration: 5},
+    //     {label: '提高', duration: 8},
+    //     {label: '看笔记', duration: 5},
+    //     {label: '660题第二遍', duration: 8},
+    //     {label: '提高第二遍', duration: 10}
+    //   ],
+    //   restDays: ''
+    // },
+
     advancedMath: {
-      startDate: '2025-12-21',
-      reviewDays: '0,2,0,2,0,5,15',
+      startDate: '2025-12-19',
+      reviewDays: '0,2,0,2,0',
       tasks: [
-        {name: '函数、极限、连续', duration: 5},
-        {name: '一元函数微分学', duration: 10},
-        {name: '一元函数积分学', duration: 14},
-        {name: '多元函数微分学', duration: 4},
+        {name: '函数极限与连续', duration: 7},
+        {name: '数列极限', duration: 1},
+        {name: '一元函数微分学的概念', duration: 2},
+        {name: '一元函数微分学的计算', duration: 3},
+        {name: '一元函数微分学的几何应用', duration: 4},
+        {name: '一元函数微分学的应用', duration: 4},
+        {name: '一元函数微分学的物理与经济应用', duration: 1},
+        {name: '一元函数积分学的概念与性质', duration: 6},
+        {name: '一元函数积分学的计算', duration: 5},
+        {name: '一元函数积分学的几何应用', duration: 3},
+        {name: '一元函数积分学的积分（不）等式应用', duration: 2},
+        {name: '一元函数积分学的物理与经济应用', duration: 1},
+        {name: '多元函数微分学', duration: 6},
         {name: '二重积分', duration: 4},
-        {name: '常微分方程', duration: 4},
+        {name: '微分方程', duration: 5}
       ],
       rounds: ['Book',
-        {label: '660题', duration: 5},
-        {label: '基础', duration: 8},
+        {label: '例题 & 课后习题', duration: 5},
+        {label: '基础1000题', duration: 8},
         {label: '总结', duration: 5},
-        {label: '提高', duration: 8},
+        {label: '强化1000题', duration: 8},
         {label: '看笔记', duration: 5},
-        {label: '660题第二遍', duration: 8},
-        {label: '提高第二遍', duration: 10}
       ],
-      restDays: ''
+      restDays: '2025-12-26,2025-12-27,2025-12-28'
     },
+
+    // MO
     advancedMathMo: {
       startDate: '2025-12-02',
       reviewDays: '0,1,0,2,6,15',
