--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -130,7 +130,7 @@
   // 默认数据
   const defaultData = {
     'lowFrequencyWords&PE': {
-      startDate: '2025-12-26',
+      startDate: '2026-01-02',
       reviewDays: '0,1,3,6,15',
       tasks: [
         {name: '001-008', duration: 1},
@@ -161,7 +161,7 @@
         {label: '笔记', duration: 1},
         {label: '笔记', duration: 1}
       ],
-      restDays: '2025-12-28,2025-12-29,2026-01-02,2026-01-03,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15,2026-01-17,2026-01-19,2026-01-21,2026-01-23,2026-01-25,2026-01-27,2026-01-29'
+      restDays: '2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15,2026-01-17,2026-01-19,2026-01-21,2026-01-23,2026-01-25,2026-01-27,2026-01-29'
     },
     coreWords: {
       startDate: '2025-10-10',
