--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -401,7 +401,7 @@
         {name: '一元函数微分学的几何应用', duration: 4},
         {name: '一元函数微分学的应用', duration: 4},
         {name: '一元函数微分学的物理与经济应用', duration: 1},
-        {name: '一元函数积分学的概念与性质', duration: 6},
+        {name: '一元函数积分学的概念与性质', duration: 7},
         {name: '一元函数积分学的计算', duration: 5},
         {name: '一元函数积分学的几何应用', duration: 3},
         {name: '一元函数积分学的积分（不）等式应用', duration: 2},
@@ -412,8 +412,8 @@
       ],
          rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
         ],
-      restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
-
+      restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-03,2026-01-01,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
+      
     },
     writeMo: {
       startDate: '2025-12-15',
@@ -433,7 +433,8 @@
         //{name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1}
       ],
       rounds: ['听', '读', '背', '中译英', '中译英', '默写1', '默写2'],
-      restDays: '2025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2026-01-01,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15'
+      restDays: '22025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2025-12-31,2026-01-01,2026-01-02,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15'
+    
     },
     'lowFrequencyWords&PEMo': {
       startDate: '2025-12-15',
