--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -361,11 +361,11 @@
 
     advancedMath: {
       startDate: '2025-12-19',
-      reviewDays: '0,2,0,2,0',
+      reviewDays: '0,2,4,4,4',
       tasks: [
         {name: '函数极限与连续', duration: 7},
         {name: '数列极限', duration: 1},
-        {name: '一元函数微分学的概念', duration: 2},
+        {name: '一元函数微分学的概念', duration: 3},
         {name: '一元函数微分学的计算', duration: 3},
         {name: '一元函数微分学的几何应用', duration: 4},
         {name: '一元函数微分学的应用', duration: 4},
@@ -380,13 +380,13 @@
         {name: '微分方程', duration: 5}
       ],
       rounds: ['Book',
-        {label: '例题 & 课后习题', duration: 5},
-        {label: '基础1000题', duration: 8},
-        {label: '总结', duration: 5},
-        {label: '强化1000题', duration: 8},
-        {label: '看笔记', duration: 5},
+        {label: '例题 & 总结', duration: 5},
+        {label: '课后习题', duration: 3},
+        {label: '基础1000题', duration: 3},
+        {label: '看笔记', duration: 3},
+        {label: '强化1000题', duration: 3},
       ],
-      restDays: '2025-12-26,2025-12-27,2025-12-28'
+      restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30'
     },
 
     // MO
@@ -413,7 +413,7 @@
          rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
         ],
       restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-03,2026-01-01,2026-01-07,2026-01-09,2026-01-14,2026-01-18,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
-      
+
     },
     writeMo: {
       startDate: '2025-12-15',
@@ -434,7 +434,7 @@
       ],
       rounds: ['听', '读', '背', '中译英', '中译英', '默写1', '默写2'],
       restDays: '22025-12-22,2025-12-24,2025-12-26,2025-12-28,2025-12-30,2025-12-31,2026-01-01,2026-01-02,2026-01-01,2026-01-03,2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15'
-    
+
     },
     'lowFrequencyWords&PEMo': {
       startDate: '2025-12-15',
