--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -133,26 +133,30 @@
       startDate: '2026-01-02',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: '001-008', duration: 1},
-        {name: '009-016', duration: 1},
+        {name: '001-006', duration: 1},
+        {name: '006-012', duration: 1},
+        {name: '013-018', duration: 1},
         {name: 'PE 001-020', duration: 1},
-        {name: '017-024', duration: 1},
-        {name: '025-032', duration: 1},
+        {name: '019-024', duration: 1},
+        {name: '025-030', duration: 1},
+        {name: '031-036', duration: 1},
         {name: 'PE 021-040', duration: 1},
-        {name: '033-040', duration: 1},
-        {name: '041-048', duration: 1},
+        {name: '037-042', duration: 1},
+        {name: '043-048', duration: 1},
+        {name: '049-054', duration: 1},
         {name: 'PE 041-060', duration: 1},
-        {name: '049-056', duration: 1},
-        {name: '057-064', duration: 1},
+        {name: '055-060', duration: 1},
+        {name: '061-066', duration: 1},
+        {name: '067-072', duration: 1},
         {name: 'PE 061-080', duration: 1},
-        {name: '065-072', duration: 1},
-        {name: '073-080', duration: 1},
+        {name: '073-078', duration: 1},
+        {name: '079-084', duration: 1},
+        {name: '085-090', duration: 1},
         {name: 'PE 081-100', duration: 1},
-        {name: '081-088', duration: 1},
-        {name: '089-096', duration: 1},
-        {name: '097-104', duration: 1},
-        {name: '105-112', duration: 1},
-        {name: '113-118', duration: 1}
+        {name: '091-097', duration: 1},
+        {name: '098-104', duration: 1},
+        {name: '105-111', duration: 1},
+        {name: '112-118', duration: 1},
       ],
       rounds: ['视频',
         {label: '笔记', duration: 1},
@@ -161,7 +165,7 @@
         {label: '笔记', duration: 1},
         {label: '笔记', duration: 1}
       ],
-      restDays: '2026-01-07,2026-01-09,2026-01-11,2026-01-13,2026-01-15,2026-01-17,2026-01-19,2026-01-21,2026-01-23,2026-01-25,2026-01-27,2026-01-29'
+      restDays: '2026-01-09,2026-01-13,2026-01-16,2026-01-17,2026-01-18,2026-01-21,2026-01-24,2026-01-26,2026-01-31,2026-02-01,2026-02-02,2026-02-03,2026-02-05,2026-02-06'
     },
     coreWords: {
       startDate: '2025-10-10',
