--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -43,7 +43,7 @@
             gap: 6px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script src="html2canvas.min.js"></script>
 </head>
 <body>
 <h2>艾宾浩斯学习计划生成器（按周日历）</h2>
@@ -165,7 +165,7 @@
         {label: '笔记', duration: 1},
         {label: '笔记', duration: 1}
       ],
-      restDays: '2026-01-09,2026-01-13,2026-01-16,2026-01-17,2026-01-18,2026-01-21,2026-01-24,2026-01-26,2026-01-31,2026-02-01,2026-02-02,2026-02-03,2026-02-05,2026-02-06'
+      restDays: '2026-01-07,2026-01-09,2026-01-13,2026-01-16,2026-01-17,2026-01-18,2026-01-21,2026-01-24,2026-01-26,2026-01-31,2026-02-01,2026-02-02,2026-02-03,2026-02-05,2026-02-06'
     },
     coreWords: {
       startDate: '2025-10-10',
@@ -390,7 +390,7 @@
         {label: '看笔记', duration: 3},
         {label: '强化1000题', duration: 3},
       ],
-      restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30'
+      restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30,2026-01-06'
     },
 
     // MO
@@ -684,11 +684,18 @@
       alert('请先生成日历');
       return;
     }
+    if (typeof html2canvas === 'undefined') {
+      alert('html2canvas库未加载，请检查网络连接或刷新页面重试');
+      return;
+    }
     html2canvas(calendarDiv).then(canvas => {
       const link = document.createElement('a');
       link.download = 'plan.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
+    }).catch(err => {
+      alert('导出图片失败: ' + err.message);
+      console.error('导出失败:', err);
     });
   });
 </script>
